[JENKINS-75851] the caret has not been aligned correctly in the middle before
(cherry picked from commit 03a152084fa12bcf56eaaa38876437e87193c984)

From pull request:

* https://github.com/jenkinsci/jenkins/pull/10803

--- a/src/main/scss/components/_breadcrumbs.scss
+++ b/src/main/scss/components/_breadcrumbs.scss
@@ -27,6 +27,7 @@
 
       .dropdown-indicator {
         margin-right: 4px;
+        display: flex;
       }
 
       & > a,
